Fixing site, added linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Rohan's Portfolio Site"
 title_separator          : "-"
 name                     : &name "Rohan Kumar"
 description              : &description "Rohan Kumar's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://rohankumar-1.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "https://rohankumar-1.github.io" # the subpath of your site, e.g. "/blog"
+baseurl                  : "https://academicpages.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -51,7 +51,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "https://github.com/rohankumar-1"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : https://www.linkedin.com/in/rohan-kumar-in/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
